--- a/config/prod/subnets.yaml
+++ b/config/prod/subnets.yaml
@@ -8,5 +8,5 @@ parameters:
   PrivCidrBlockA: 10.128.20.0/22
   PrivCidrBlockB: 10.128.24.0/22
   PrivCidrBlockC: 10.128.28.0/22
-#  StackName: network
+#  StackName: network..
 #  Environment: {{ env }}
