--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ version: 0.2
 #  fast-fail: false | true
 #  # build-list:
 #  # build-matrix:
-#  # build-graph:
+#  # build-graph::
 
 phases:
   install:
