--- a/config/dev/buildspec.yml
+++ b/config/dev/buildspec.yml
@@ -1,6 +1,10 @@
 ---
 version: 0.2
 
+env:
+  exported-variables:
+    - ChnagesetName
+
 phases:
   install:
     runtime-versions:
@@ -11,7 +15,9 @@ phases:
   build:
     commands:
       - echo Started build for last commit $CODEBUILD_SOURCE_VERSION
-      - echo Updating stacks
-      - sceptre launch -y dev
+      - echo Creating a change set
+      - ChnagesetName=$(uuidgen)
+      - echo changeset name $ChnagesetName
+      - sceptre create dev $ChnagesetName
     finally:
-      - echo Stacks got updated successfully
+      - echo Change Set Created successfully
